2009-03-10  Stefan Kost  <ensonic@users.sf.net>

	patch by: Nicola Fontana <ntd@entidi.it>

	* gtkdoc-scan.in:
	* tests/bugs/docs/Makefile.am:
	* tests/bugs/src/tester.h:
	  Improve the test and fix handling trailing decorators. Fixes #574654

2009-03-10  Stefan Kost  <ensonic@users.sf.net>

	* tests/bugs/docs/Makefile.am:
	* tests/bugs/docs/tester-sections.txt:
	* tests/bugs/src/tester.c:
	* tests/bugs/src/tester.h:
	  Adding a test for #574654.

2009-03-10  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-fixxref.in:
	  Don't expect $MODULE to be defined (e.g. if someone does not update
	  gtkdoc.make).

2009-03-09  Stefan Kost  <ensonic@users.sf.net>

	* ChangeLog:
	  Fix ChangeLog format so that we pick up the bug number for release
	  notes.

2009-03-09  Stefan Kost  <ensonic@users.sf.net>

	patch by: David Nečas <yeti@physics.muni.cz>

	* configure.in:
	* gtkdoc-fixxref.in:
	  Add vim support for syntax highlighting. Lets close the ticket.
	  Fixes #536928.

2009-03-09  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-scangobj.in:
	  Don't confuse -1 with G_MAXULONG on 64bit. Fixes #572612.

2009-02-26  Stefan Kost  <ensonic@users.sf.net>

	* doc/gtkdoc.dot:
	  Improve. scan only checks headers, while mkdb scans sources and
	  headers.

	* examples/Makefile.am:
	  Document more variables.

2009-02-26  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-scangobj.in:
	* gtkdoc-scanobj.in:
	  There is some gtk specific stuff there, which we probably want to kick
	  out. No one else gets such a treatment.

2009-02-26  Stefan Kost  <ensonic@users.sf.net>

	* gtk-doc.xsl:
	* style.css:
	* gtkdoc-mkdb.in:
	  Fix annotation more. Refactor the extra-link feature. Still disabled
	  by default. Needs configure stuff next.

2009-02-24  Stefan Kost  <ensonic@users.sf.net>

	patch by: Paolo Borelli <pborelli@katamail.com>

	* gtkdoc-scangobj.in:
	* gtkdoc-scanobj.in:
	  Use g_strerror. Fixes #572967.

2009-02-23  Sven Herzberg  <herzi@gnome-de.org>
